--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@ layout: default
                     <p>{{ site.footer.github }}</p>
                 </section>
                 <section>
-                    <h2>Sponsor</h2>
-                    <div class="ad">
+                                    <div class="ad">
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <ins class="adsbygoogle"
                              style="display:block; text-align:center;"
@@ -55,7 +54,7 @@ layout: default
                     </div>
                 </section>
                 <section>
-                    <h2>Follow me on ...</h2>
+                    <h1>Follow me on:</h1>
                     <ul class="icons">
                         {% if site.social_urls.facebook %}
                             <li>
