--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ layout: default
             <div>
                 <section>
                     <h2>Get in touch</h2>
-                    <form method="post" action="#">
+                    <<form class="gform" form method="post" action="https://script.google.com/macros/s/AKfycbz7OOloFn5WghMdNoSU-GPhiPJwuWUaVPXyZAGadrOihOnbkzfpp8NKpNEPO8qRv7Wm/exec">
                         <div class="field half first">
                             <input type="text" name="name" id="name" placeholder="Name"/>
                         </div>
