--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
                 <li><a href="#footer" class="icon fa-info-circle">About</a></li>
             </ul>
         </nav>
+        
     </header>
 
     <!-- Main -->
@@ -107,7 +108,7 @@ layout: default
             <div>
                 <section>
                     <h2>Get in touch</h2>
-                    <<form class="gform" form method="post" action="https://script.google.com/macros/s/AKfycbz7OOloFn5WghMdNoSU-GPhiPJwuWUaVPXyZAGadrOihOnbkzfpp8NKpNEPO8qRv7Wm/exec">
+                    <<form class="gform" form method="post" data-email="arlechinoy@gmail.com" action="https://script.google.com/macros/s/AKfycbz7OOloFn5WghMdNoSU-GPhiPJwuWUaVPXyZAGadrOihOnbkzfpp8NKpNEPO8qRv7Wm/exec">
                         <div class="field half first">
                             <input type="text" name="name" id="name" placeholder="Name"/>
                         </div>
@@ -121,9 +122,15 @@ layout: default
                             <li><input type="submit" value="Send" class="special"/></li>
                             <li><input type="reset" value="Reset"/></li>
                         </ul>
+                    <div style="display:none" class="thankyou_message">
+ <!-- You can customize the thankyou message by editing the code below -->
+ <h2><em>Thanks</em> for contacting me! I will get back to you soon!
+ </h2>
+</div>
                     </form>
                 </section>
             </div>
         </div>
+    <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
     </footer>
 </div>
